# MonoGlyph

./: CMakeLists.txt  README.md  main.cpp
fonts/: english.font
include/: MonoGlyph.h  color.h  commonTypes.h  drawer.h  eventLoop.h  fileDescriptor.h  font.h  fontManager.h  interfaceDrawer.h  pixel.h  screenBuffer.h  signalFD.hpp  state.h  stateID.h  stateInfinite.h  stateLoading.h  stateMenu.h  stateRestart.h  terminal.h  timerFD.hpp
src/: MonoGlyph.cpp  drawer.cpp  eventLoop.cpp  fileDescriptor.cpp  font.cpp  fontManager.cpp  interfaceDrawer.cpp  loading.cpp  menu.cpp  screenBuffer.cpp  stateInfinite.cpp  stateMenu.cpp  stateRestart.cpp  terminal.cpp  typing.cpp
